--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>React Template</title>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
+
 <body>
-<div id="root"></div>
+  <div id="root"></div>
 </body>
 </html>
